[package]
name = "scenic_review"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "associated_token", "metadata"] }
mpl-token-metadata = { version = "4.1.2", features = ["no-entrypoint"] }
# spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
# spl-token-2022 = { version = "=0.9.0", features = ["no-entrypoint"] }
# spl-memo = "=4.0.0"
# spl-associated-token-account = "=2.0.0"
solana-program = "1.18"
blake3 = { version = "=1.7.0", features = ["digest"] }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }
thiserror = "1.0"
sha2 = "0.10"
borsh = "0.10"
